tests/spec/emit/snapshots/map_field_assignment_map_expr_evaluated_once.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  struct Box { x: int }
  
  fn make_i() -> int {
    fmt.Println("i")
    0
  }
  
  fn main() {
    let mut maps: mut Map<int, mut Map<string, Box>> = Map.new()
    let mut inner = Map.new<string, Box>()
    inner["k"] = Box { x: 0 }
    maps[0] = inner
    let i = make_i()
    let mut entry = maps[i]["k"]
    entry.x = 1
    maps[i]["k"] = entry
  }
---
package main

import "fmt"

type Box struct {
	x int
}

func makeI() int {
	fmt.Println("i")
	return 0
}

func main() {
	maps_ := make(map[int]map[string]Box)
	inner := make(map[string]Box)
	inner["k"] = Box{x: 0}
	maps_[0] = inner
	i := makeI()
	entry := maps_[i]["k"]
	entry.x = 1
	maps_[i]["k"] = entry
}
