tests/spec/emit/snapshots/map_field_assignment_newtype.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct New(int)
  
  fn main() {
    let mut m: mut Map<string, New> = Map.new()
    m["a"] = New(0)
    m["a"] = New(5)
  }
---
package main

type New int

func main() {
	m := make(map[string]New)
	m["a"] = New(0)
	m["a"] = New(5)
}
