tests/spec/emit/snapshots/map_field_assignment_newtype_inner_field.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Inner { x: int }\nstruct Wrap(Inner)\n\nfn main() {\n  let mut m = Map.new<string, Wrap>()\n  m[\"a\"] = Wrap(Inner { x: 1 })\n  let mut inner = m[\"a\"].0\n  inner.x = 2\n  m[\"a\"] = Wrap(inner)\n}\n"
---
package main

type Inner struct {
	x int
}

type Wrap Inner

func main() {
	m := make(map[string]Wrap)
	m["a"] = Wrap(Inner{x: 1})
	inner := Inner(m["a"])
	inner.x = 2
	m["a"] = Wrap(inner)
}
