tests/spec/emit/snapshots/map_field_assignment_parenthesized.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box { x: int }
  
  fn main() {
    let mut m = Map.from([("a", Box { x: 1 })])
    let mut entry = m["a"]
    entry.x = 2
    m["a"] = entry
  }
---
package main

type Box struct {
	x int
}

func main() {
	m := map[string]Box{"a": Box{x: 1}}
	entry := m["a"]
	entry.x = 2
	m["a"] = entry
}
