tests/spec/emit/snapshots/map_field_assignment_temp_var_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  struct Box { x: int }
  
  fn main() {
    let mut m = Map.from([("a", Box { x: 1 })])
    let mut entry = m["a"]
    entry.x = 2
    m["a"] = entry
    let entry_1 = 3
    fmt.Println(entry_1)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

type Box struct {
	x int
}

func main() {
	m := lisette.MapFrom([]lisette.Tuple2[string, Box]{lisette.MakeTuple2[string, Box]("a", Box{x: 1})})
	entry := m["a"]
	entry.x = 2
	m["a"] = entry
	entry_1 := 3
	fmt.Println(entry_1)
}
