tests/spec/emit/snapshots/map_field_assignment_tuple_field.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let mut m = Map.new<string, (int, int)>()
    m["k"] = (0, 0)
    let mut entry = m["k"]
    entry.0 = 1
    m["k"] = entry
    let v = m["k"].0
    fmt.Println(v)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	m := make(map[string]lisette.Tuple2[int, int])
	m["k"] = lisette.MakeTuple2[int, int](0, 0)
	entry := m["k"]
	entry.First = 1
	m["k"] = entry
	v := m["k"].First
	fmt.Println(v)
}
