tests/spec/emit/snapshots/map_field_ref_slice_append.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Outer { items: mut Ref<Slice<int>> }
  
  fn main() {
    let mut items = [1]
    let mut m = Map.new<string, mut Outer>()
    m["a"] = Outer { items: &items }
    let Some(o) = m.get("a") else { return; };
    o.items.* = o.items.*.append(2)
    let _ = items
  }
---
package main

type Outer struct {
	items *[]int
}

func main() {
	items := []int{1}
	m := make(map[string]Outer)
	m["a"] = Outer{items: &items}
	o, ok := m["a"]
	if !ok {
		return
	}
	*o.items = append(*o.items, 2)
	_ = items
}
