tests/spec/emit/snapshots/map_field_ref_slice_append_expr_position.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Outer { items: Ref<Slice<int>> }
  
  fn main() {
    let mut items = [1]
    let mut m = Map.new<string, Outer>()
    m["a"] = Outer { items: &items }
    let Some(o) = m.get("a") else { return; };
    let _ = { o.items.*.append(2) }
    let _ = items
  }
---
package main

type Outer struct {
	items *[]int
}

func main() {
	items := []int{1}
	m := make(map[string]Outer)
	m["a"] = Outer{items: &items}
	o, ok := m["a"]
	if !ok {
		return
	}
	var tmp []int
	recv := *o.items
	tmp = append(recv[:len(recv):len(recv)], 2)
	_ = tmp
	_ = items
}
