tests/spec/emit/snapshots/map_from_integer_or_rune_keys_uses_a_map_literal.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn ids() -> Map<int, string> {
    Map.from([(1, "ann"), (0x10, "bo"), (1_000, "cy")])
  }
  
  fn letters() -> Map<rune, int> {
    Map.from([('a', 1), ('b', 2)])
  }
  
  fn weights() -> Map<float64, int> {
    Map.from([(1, 1), (2, 2)])
  }
  
  fn test() {
    if ids()[16] != "bo" { panic("a hex key should find its entry") }
    if letters()['b'] != 2 { panic("a rune key should find its entry") }
    if weights()[2.0] != 2 { panic("a float key should find its entry") }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func ids() map[int]string {
	return map[int]string{1: "ann", 0x10: "bo", 1000: "cy"}
}

func letters() map[rune]int {
	return map[rune]int{'a': 1, 'b': 2}
}

func weights() map[float64]int {
	return lisette.MapFrom([]lisette.Tuple2[float64, int]{
		lisette.MakeTuple2[float64, int](1, 1),
		lisette.MakeTuple2[float64, int](2, 2),
	})
}

func test() {
	base := ids()
	if base[16] != "bo" {
		panic("a hex key should find its entry")
	}
	base_1 := letters()
	if base_1['b'] != 2 {
		panic("a rune key should find its entry")
	}
	base_2 := weights()
	if base_2[2.0] != 2 {
		panic("a float key should find its entry")
	}
}
