tests/spec/emit/snapshots/map_from_non_literal_keys_keeps_prelude_call.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  const KEY = "a"
  
  fn test() -> Map<string, int> {
    Map.from([(KEY, 1), (KEY, 2)])
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

const Key = "a"

func test() map[string]int {
	return lisette.MapFrom([]lisette.Tuple2[string, int]{
		lisette.MakeTuple2[string, int](Key, 1),
		lisette.MakeTuple2[string, int](Key, 2),
	})
}
